--- a/LP-BD2.html
+++ b/LP-BD2.html
@@ -24,7 +24,7 @@
         </tr>
         <tr>
             <td valign="bottom">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD2/Anne-Frank-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1689606896/Digital%20Library/BIG%20DREAMS/Anne_Frank.png" alt="Anne Frank" title="Anne Frank - Mª Isabel Sánchez Vegara
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD2/Anne%20Frank/html5.html" target="_blank"><img src="https://res.cloudinary.com/firstterm/image/upload/v1689606896/Digital%20Library/BIG%20DREAMS/Anne_Frank.png" alt="Anne Frank" title="Anne Frank - Mª Isabel Sánchez Vegara
 Anne Frank was born in Germany to a loving 
 family. But when World War II broke out, 
 Anne and her family had to hide in a secret 
@@ -35,7 +35,7 @@ her diary captured the hearts of the public and
 she became one of the most important diarists 
 of the loth century. This story of her life features 
 a facts and photos section at the back." onmouseover="this.width=155;this.height=185;" style="cursor: pointer;" onmouseout="this.width=160;this.height=190" width="160" height="190"></a></td>
-            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD2/Jane-Goodall-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1689688119/Digital%20Library/BIG%20DREAMS/Jane_Goodall.png" alt="Jane Goodall" title="Jane Goodall - Mª Isabel Sánchez Vegara
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD2/Jane%20Goodall/html5.html" target="_blank"><img src="https://res.cloudinary.com/firstterm/image/upload/v1689688119/Digital%20Library/BIG%20DREAMS/Jane_Goodall.png" alt="Jane Goodall" title="Jane Goodall - Mª Isabel Sánchez Vegara
 When Jane was little, her father gave her a 
 toy chimpanzee named Jubilee. This inspired 
 her lifelong love of animals, and she went 
@@ -46,7 +46,7 @@ pioneering approach to research. She now
 educates the public on animal rights. This 
 inspiring story of her life features a facts 
 and photos section at the back." onmouseover="this.width=155;this.height=185;" style="cursor: pointer;" onmouseout="this.width=160;this.height=190" width="160" height="190"></a></td>
-            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD2/Mother-Teresa-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1690015203/Digital%20Library/BIG%20DREAMS/Mother_Teresa.png" alt="Mother Teresa" title="Mother Teresa - Mª Isabel Sánchez Vegara
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD2/Mother%20Teresa/html5.html" target="_blank"><img src="https://res.cloudinary.com/firstterm/image/upload/v1690015203/Digital%20Library/BIG%20DREAMS/Mother_Teresa.png" alt="Mother Teresa" title="Mother Teresa - Mª Isabel Sánchez Vegara
 Mother Teresa was born in Skopje, Macedonia. 
 From an early age, she knew she wanted to 
 dedicate herself to religion. She was 
@@ -57,7 +57,7 @@ the sick and poor around the world and is
 now remembered as Saint Teresa of Calcutta. 
 The incredible story of her life features 
 a facts and photos section at the back." onmouseover="this.width=155;this.height=185;" style="cursor: pointer;" onmouseout="this.width=160;this.height=190" width="160" height="190"></a></td>
-            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD2/Malala-Yousafzai-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1690015364/Digital%20Library/BIG%20DREAMS/Malala_Yousafzai.png" alt="Malala Yousafzai" title="Malala Yousafzai - Mª Isabel Sánchez Vegara
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD2/Malala%20Yousafzai/html5.html" target="_blank"><img src="https://res.cloudinary.com/firstterm/image/upload/v1690015364/Digital%20Library/BIG%20DREAMS/Malala_Yousafzai.png" alt="Malala Yousafzai" title="Malala Yousafzai - Mª Isabel Sánchez Vegara
 When Malala was born in Mingora, Pakistan, her 
 father was determined she would have every 
 opportunity that a boy would have. Malala loved 
@@ -69,7 +69,7 @@ an activist for girls' education. This story of
 the education advocate and Nobel Peace Prize 
 laureate features a fact and photo section at 
 the back." onmouseover="this.width=155;this.height=185;" style="cursor: pointer;" onmouseout="this.width=160;this.height=190" width="160" height="190"></a></td>
-            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD2/Mary-Anning-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1690109732/Digital%20Library/BIG%20DREAMS/Mary_Anning.png" alt="Mary Anning" title="Mary Anning - Mª Isabel Sánchez Vegara
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD2/Mary%20Anning/html5.html" target="_blank"><img src="https://res.cloudinary.com/firstterm/image/upload/v1690109732/Digital%20Library/BIG%20DREAMS/Mary_Anning.png" alt="Mary Anning" title="Mary Anning - Mª Isabel Sánchez Vegara
 The day little Mary joined her father on a walk 
 to the beach to look for stones and shells, she 
 became an avid fossil hunter. Aged 12, she 
@@ -81,7 +81,7 @@ interest in  fossil, her discoveries sparked a
 worldwide interest in paleontology. This inspiring 
 story of the fossil hunter's life features a fact 
 and photo section at the back." onmouseover="this.width=155;this.height=185;" style="cursor: pointer;" onmouseout="this.width=160;this.height=190" width="160" height="190"></a></td>
-            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD2/Amelia-Earhart-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1690190449/Digital%20Library/BIG%20DREAMS/Amelia_Earhart.png" alt="Amelia Earhart" title="Amelia Earhart - Mª Isabel Sánchez Vegara
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD2/Amelia%20Earhart/html5.html" target="_blank"><img src="https://res.cloudinary.com/firstterm/image/upload/v1690190449/Digital%20Library/BIG%20DREAMS/Amelia_Earhart.png" alt="Amelia Earhart" title="Amelia Earhart - Mª Isabel Sánchez Vegara
 When Amelia Earhart was young, she liked to 
 imagine she could stretch her wings and fly 
 away like a bird. As a grown woman, she set 
@@ -92,7 +92,7 @@ the most dangerous mission of all: to fly all
 the way around the world. The inspiring story of 
 this brave woman features a facts and photos 
 section at the back." onmouseover="this.width=155;this.height=185;" style="cursor: pointer;" onmouseout="this.width=160;this.height=190" width="160" height="190"></a></td>
-            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD2/Audrey-Hepburn-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1690223635/Digital%20Library/BIG%20DREAMS/Audrey_Hepburn.png" alt="Audrey Hepburn" title="Audrey Hepburn - Mª Isabel Sánchez Vegara
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD2/Audrey%20Hepburn/html5.html" target="_blank"><img src="https://res.cloudinary.com/firstterm/image/upload/v1690223635/Digital%20Library/BIG%20DREAMS/Audrey_Hepburn.png" alt="Audrey Hepburn" title="Audrey Hepburn - Mª Isabel Sánchez Vegara
 Audrey Hepburn grew up in Arnhem in the Netherlands. 
 After living through the hardships of World War Two, 
 she moved to study ballet in London. She went on to 
@@ -112,7 +112,7 @@ photos section at the back." onmouseover="this.width=155;this.height=185;" style
         </tr>
         <tr>
             <td valign="bottom" align="center"></td>
-            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD2/Harriet-Tubman-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1690305314/Digital%20Library/BIG%20DREAMS/Harriet_Tubman.png" alt="Harriet Tubman" title="Harriet Tubman - Mª Isabel Sánchez Vegara
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD2/Harriet%20Tubman/html5.html" target="_blank"><img src="https://res.cloudinary.com/firstterm/image/upload/v1690305314/Digital%20Library/BIG%20DREAMS/Harriet_Tubman.png" alt="Harriet Tubman" title="Harriet Tubman - Mª Isabel Sánchez Vegara
 Harriet Tubman was born into slavery on a plantation 
 in Maryland. Though life was hard, Harriet persisted. 
 She used all of her strength and bravery to escape 
@@ -121,7 +121,7 @@ Harriet made the dangerous mission back to the South
 many times, fighting her whole life to bring others 
 with her to freedom. The incredible story of her life 
 features a facts and photos section at the back." onmouseover="this.width=155;this.height=185;" style="cursor: pointer;" onmouseout="this.width=160;this.height=190" width="160" height="190"></a></td>
-            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD2/Jane-Austen-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1690382178/Digital%20Library/BIG%20DREAMS/Jane_Austen.png" alt="Jane Austen" title="Jane Austen - Mª Isabel Sánchez Vegara
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD2/Jane%20Austen/html5.html" target="_blank"><img src="https://res.cloudinary.com/firstterm/image/upload/v1690382178/Digital%20Library/BIG%20DREAMS/Jane_Austen.png" alt="Jane Austen" title="Jane Austen - Mª Isabel Sánchez Vegara
 Jane Austen was born into a large family 
 with seven brothers and sisters. She grew 
 up reading and writing stories in the 
@@ -132,7 +132,7 @@ before. These novels made Jane one of the
 most loved British writers of all time. 
 This inspiring story of her life features 
 a facts and photos section at the back." onmouseover="this.width=155;this.height=185;" style="cursor: pointer;" onmouseout="this.width=160;this.height=190" width="160" height="190"></a></td>
-            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD2/Marie-Curie-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1690493853/Digital%20Library/BIG%20DREAMS/Marie_Curie.png" alt="Marie Curie" title="Marie Curie - Mª Isabel Sánchez Vegara
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD2/Marie%20Curie/html5.html" target="_blank"><img src="https://res.cloudinary.com/firstterm/image/upload/v1690493853/Digital%20Library/BIG%20DREAMS/Marie_Curie.png" alt="Marie Curie" title="Marie Curie - Mª Isabel Sánchez Vegara
 When Marie Curie was young, she was unable 
 to attend university because she was a woman. 
 But when she was older, her scientific work 
@@ -143,7 +143,7 @@ cancer, and she went on to win the Nobel
 Prize for Physics! The inspiring story of 
 this clever and courageous woman features a 
 facts and photos section at the back." onmouseover="this.width=155;this.height=185;" style="cursor: pointer;" onmouseout="this.width=160;this.height=190" width="160" height="190"></a></td>
-            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD2/Josephine-Baker-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1690552301/Digital%20Library/BIG%20DREAMS/Josephine_Baker.png" alt="Josephine Baker" title="Josephine Baker - Mª Isabel Sánchez Vegara
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD2/Josephine%20Baker/html5.html" target="_blank"><img src="https://res.cloudinary.com/firstterm/image/upload/v1690552301/Digital%20Library/BIG%20DREAMS/Josephine_Baker.png" alt="Josephine Baker" title="Josephine Baker - Mª Isabel Sánchez Vegara
 Josephine Baker was born for the stage. But 
 growing up in segregated St. Louis, she didn't 
 have the same opportunities as white 
@@ -155,7 +155,7 @@ the word that people of all colors can live
 together in harmony. This inspiring story of 
 her life features a facts and photos section 
 at the back." onmouseover="this.width=155;this.height=185;" style="cursor: pointer;" onmouseout="this.width=160;this.height=190" width="160" height="190"></a></td>
-            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD2/Maya-Angelou-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1690628670/Digital%20Library/BIG%20DREAMS/Maya_Angelou.png" alt="Maya Angelou" title="Maya Angelou - Lisbeth Kaiser
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD2/Maya%20Angelou/html5.html" target="_blank"><img src="https://res.cloudinary.com/firstterm/image/upload/v1690628670/Digital%20Library/BIG%20DREAMS/Maya_Angelou.png" alt="Maya Angelou" title="Maya Angelou - Lisbeth Kaiser
 Maya Angelou spent much of her 
 childhood in Stamps, Arkansas. 
 After a traumatic event at age eight,
@@ -166,7 +166,7 @@ to become one of the world's most
 beloved writers and speakers. This 
 inspiring story of her life features 
 a facts and photos section at the back." onmouseover="this.width=155;this.height=185;" style="cursor: pointer;" onmouseout="this.width=160;this.height=190" width="160" height="190"></a></td>
-            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD2/L.M.-Montgomery-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1690705943/Digital%20Library/BIG%20DREAMS/LM_Montgomery.png" alt="L. M. Montgomery" title="L. M. Montgomery - Mª Isabel Sánchez Vegara
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD2/L.M.%20Montgomery/html5.html" target="_blank"><img src="https://res.cloudinary.com/firstterm/image/upload/v1690705943/Digital%20Library/BIG%20DREAMS/LM_Montgomery.png" alt="L. M. Montgomery" title="L. M. Montgomery - Mª Isabel Sánchez Vegara
 Lucy Maud Montgomery lost her mother when she 
 was very young. Left in the care of less-than-
 encouraging grandparents, she found comfort in 
@@ -176,7 +176,7 @@ she had, creating one of the best-loved characters
 of all time: Anne of Green Gables. This inspiring 
 story of the Canadian author's life features a 
 facts and photos section at the back." onmouseover="this.width=155;this.height=185;" style="cursor: pointer;" onmouseout="this.width=160;this.height=190" width="160" height="190"></a></td>
-            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD2/Hedy-Lamarr-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1690750358/Digital%20Library/BIG%20DREAMS/Hedy_Lamarr.png" alt="Hedy Lamarr" title="Hedy Lamarr - Mª Isabel Sánchez Vegara
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD2/Hedy%20Lamarr/html5.html" target="_blank"><img src="https://res.cloudinary.com/firstterm/image/upload/v1690750358/Digital%20Library/BIG%20DREAMS/Hedy_Lamarr.png" alt="Hedy Lamarr" title="Hedy Lamarr - Mª Isabel Sánchez Vegara
 Little Hedwig was a girl of many talents. She 
 loved to leam and was inspired by her father 
 to be curious about the world. After beginning 
