--- a/LP-BD3.html
+++ b/LP-BD3.html
@@ -24,7 +24,7 @@
         </tr>
         <tr>
             <td valign="bottom">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD3/Megan-Rapinoe-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1690967825/Digital%20Library/BIG%20DREAMS/Megan_Rapinoe.png" alt="Megan Rapinoe" title="Megan Rapinoe - Mª Isabel Sánchez Vegara
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD3/Megan%20Rapinoe/html5.html" target="_blank"><img src="https://res.cloudinary.com/firstterm/image/upload/v1690967825/Digital%20Library/BIG%20DREAMS/Megan_Rapinoe.png" alt="Megan Rapinoe" title="Megan Rapinoe - Mª Isabel Sánchez Vegara
 Little Megan was born with a spring in her feet, 
 11 seconds ahead of her twin sister, Rachael. 
 From an early age, Megan's determination and 
@@ -35,7 +35,7 @@ equality and justice for all people, and she's
 one of the world's most inspiring athletes. This 
 story of the activist and soccer player features 
 a fact and photo section at the back." onmouseover="this.width=155;this.height=185;" style="cursor: pointer;" onmouseout="this.width=160;this.height=190" width="160" height="190"></a></td>
-            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD3/Evonne-Goolagong-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1692010908/Digital%20Library/BIG%20DREAMS/Evonne_Goolagong.png" alt="Evonne Goolagong" title="Evonne Goolagong - Mª Isabel Sánchez Vegara
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD3/Evonne%20Goolagong/html5.html" target="_blank"><img src="https://res.cloudinary.com/firstterm/image/upload/v1692010908/Digital%20Library/BIG%20DREAMS/Evonne_Goolagong.png" alt="Evonne Goolagong" title="Evonne Goolagong - Mª Isabel Sánchez Vegara
 Aged six, Evonne read a magazine article about a 
 young girl who made it to centre court at a magical 
 place called Wimbledon. Somehow, she knew she 
@@ -44,7 +44,7 @@ was the first Indigenous Australian to win Wimbledon,
 aged 20 years old. A pioneer of Indigenous rights and 
 women in tennis, this inspiring story features a facts 
 and photos section at the back." onmouseover="this.width=155;this.height=185;" style="cursor: pointer;" onmouseout="this.width=160;this.height=190" width="160" height="190"></a></td>
-            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD3/Wilma-Mankiller-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1691002653/Digital%20Library/BIG%20DREAMS/Wilma_Mankiller.png" alt="Wilma Mankiller" title="Wilma Mankiller - Mª Isabel Sánchez Vegara
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD3/Wilma%20Mankiller/html5.html" target="_blank"><img src="https://res.cloudinary.com/firstterm/image/upload/v1691002653/Digital%20Library/BIG%20DREAMS/Wilma_Mankiller.png" alt="Wilma Mankiller" title="Wilma Mankiller - Mª Isabel Sánchez Vegara
 Little Wilma grew up hearing the stories of her 
 people. A member of the Cherokee Nation, she 
 felt the mistreatment of Native Americans and 
@@ -55,7 +55,7 @@ community, she was elected to be the Principal
 Chief of the Cherokee Nation. This amazing story 
 of the leader and visionary features a fact and 
 photo section at the back." onmouseover="this.width=155;this.height=185;" style="cursor: pointer;" onmouseout="this.width=160;this.height=190" width="160" height="190"></a></td>
-            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD3/Zaha-Hadid-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1692308868/Digital%20Library/BIG%20DREAMS/Zaha_Hadid.png" alt="Zaha Hadid" title="Zaha Hadid - Mª Isabel Sánchez Vegara
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD3/Zaha%20Hadid/html5.html" target="_blank"><img src="https://res.cloudinary.com/firstterm/image/upload/v1692308868/Digital%20Library/BIG%20DREAMS/Zaha_Hadid.png" alt="Zaha Hadid" title="Zaha Hadid - Mª Isabel Sánchez Vegara
 By the age of seven, young Zaha Hadid was 
 designing her own clothes and bedroom 
 furniture. Fast-forward 40 years and Zaha 
@@ -65,7 +65,7 @@ harnessing the power of computer
 engineering. Mathematician, artist, and 
 architect, this inspiring story features 
 a facts and photos section at the back." onmouseover="this.width=155;this.height=185;" style="cursor: pointer;" onmouseout="this.width=160;this.height=190" width="160" height="190"></a></td>
-            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD3/Louise-Bourgeois-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1692655587/Digital%20Library/BIG%20DREAMS/Louise_Bourgeois.png" alt="Louise Bourgeois" title="Louise Bourgeois - Mª Isabel Sánchez Vegara
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD3/Louise%20Bourgeois/html5.html" target="_blank"><img src="https://res.cloudinary.com/firstterm/image/upload/v1692655587/Digital%20Library/BIG%20DREAMS/Louise_Bourgeois.png" alt="Louise Bourgeois" title="Louise Bourgeois - Mª Isabel Sánchez Vegara
 When Louise was a little girl, her mother died. 
 She learned to express her feelings through 
 drawing—and when she grew up, she turned 
@@ -75,7 +75,7 @@ features stylish and quirky illustrations and
 extra facts at the back, including a biographical 
 timeline with historical photos and a detailed 
 profile of the artist's life." onmouseover="this.width=155;this.height=185;" style="cursor: pointer;" onmouseout="this.width=160;this.height=190" width="160" height="190"></a></td>
-            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD3/Vivienne-Westwood-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1693048981/Digital%20Library/BIG%20DREAMS/Vivienne_Westwood.png" alt="Vivienne Westwood" title="Vivienne Westwood - Mª Isabel Sánchez Vegara
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD3/Vivienne%20Westwood/html5.html" target="_blank"><img src="https://res.cloudinary.com/firstterm/image/upload/v1693048981/Digital%20Library/BIG%20DREAMS/Vivienne_Westwood.png" alt="Vivienne Westwood" title="Vivienne Westwood - Mª Isabel Sánchez Vegara
 Vivienne Westwood always stood up for the outsider 
 -even at school. When she grew up, she created a 
 fashion philosophy that went against the grain and 
@@ -85,7 +85,7 @@ true to herself and speaking up for what she believed
 in. This inspiring story of the outspoken fashion 
 designer's life features a facts and photos section at 
 the back." onmouseover="this.width=155;this.height=185;" style="cursor: pointer;" onmouseout="this.width=160;this.height=190" width="160" height="190"></a></td>
-            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD3/Billie-Jean-King-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1693210104/Digital%20Library/BIG%20DREAMS/Billie_Jean_King.png" alt="Billie Jean King" title="Billie Jean King - Mª Isabel Sánchez Vegara
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD3/Billie%20Jean%20King/html5.html" target="_blank"><img src="https://res.cloudinary.com/firstterm/image/upload/v1693210104/Digital%20Library/BIG%20DREAMS/Billie_Jean_King.png" alt="Billie Jean King" title="Billie Jean King - Mª Isabel Sánchez Vegara
 Billie Jean King grew up surrounded by sport 
 of all kinds. But the first time she played 
 tennis, she knew she would become World No. 
@@ -109,7 +109,7 @@ and photo section at the back." onmouseover="this.width=155;this.height=185;" st
         </tr>
         <tr>
             <td valign="bottom" align="center"></td>
-            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD3/Maria-Montessori-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1693336089/Digital%20Library/BIG%20DREAMS/Maria_Montessori.png" alt="Maria Montessori" title="Maria Montessori - Mª Isabel Sánchez Vegara
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD3/Maria%20Montessori/html5.html" target="_blank"><img src="https://res.cloudinary.com/firstterm/image/upload/v1693336089/Digital%20Library/BIG%20DREAMS/Maria_Montessori.png" alt="Maria Montessori" title="Maria Montessori - Mª Isabel Sánchez Vegara
 From an early age, Maria Montessori challenged 
 the norm, studying science at an all-boys school. 
 As an adult, she became the first female doctor 
@@ -120,7 +120,7 @@ education, setting up Montessori schools around
 the world. This inspiring story of the revolutionary 
 doctor's life features a facts and photos section 
 at the back." onmouseover="this.width=155;this.height=185;" style="cursor: pointer;" onmouseout="this.width=160;this.height=190" width="160" height="190"></a></td>
-            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD3/Aretha-Franklin-Options.html" target="_self"><img src="https://res.cloudinary.com/firstterm/image/upload/v1693413940/Digital%20Library/BIG%20DREAMS/Aretha_Franklin.png" alt="Aretha Franklin" title="Aretha Franklin - Mª Isabel Sánchez Vegara
+            <td valign="bottom"><a href="https://makser-books.github.io/Little-People-Big-Dreams/LP-BD3/Aretha%20Franklin/html5.html" target="_blank"><img src="https://res.cloudinary.com/firstterm/image/upload/v1693413940/Digital%20Library/BIG%20DREAMS/Aretha_Franklin.png" alt="Aretha Franklin" title="Aretha Franklin - Mª Isabel Sánchez Vegara
 Aretha grew up in a family of musicians, singing 
 with heart and soul in her father’s gospel choir. 
 She went on to bring that feeling to her own 
