--- a/LP-BD1.html
+++ b/LP-BD1.html
@@ -1,4 +1,8 @@
-<table border="0" align="center">
+<html>
+	<head>
+	<title></title>
+        <link rel="shortcut icon" type="image/x-icon" href="https://res.cloudinary.com/firstterm/image/upload/v1586824030/Digital%20Library/favicon.ico" />
+	</head><table border="0" align="center">
     <tbody>
         <tr>
             <td width="440" align="left">
@@ -217,4 +221,4 @@ and photos section at the back." onmouseover="this.width=155;this.height=185;" s
             </td>
         </tr>
     </tbody>
-</table>
+</table></html>
