--- a/LP-BD2.html
+++ b/LP-BD2.html
@@ -1,4 +1,8 @@
-<table border="0" align="center">
+<html>
+	<head>
+	<title></title>
+        <link rel="shortcut icon" type="image/x-icon" href="https://res.cloudinary.com/firstterm/image/upload/v1586824030/Digital%20Library/favicon.ico" />
+	</head><table border="0" align="center">
     <tbody>
         <tr>
             <td width="440" align="left">
@@ -228,4 +232,4 @@ back." onmouseover="this.width=155;this.height=185;" style="cursor: pointer;" on
             </td>
         </tr>
     </tbody>
-</table>
+</table></html>
